[gd_scene load_steps=3 format=3 uid="uid://brhjg6vv56lpr"]

[ext_resource type="Script" path="res://scenes/pause_menu.gd" id="1_r716k"]
[ext_resource type="Theme" uid="uid://cwuunpqfss8ij" path="res://pause_menu.tres" id="1_xos3m"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_r716k")

[node name="BgOverlay" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.168627)

[node name="MenuHolder" type="VBoxContainer" parent="."]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -33.0
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeBtn" type="MenuButton" parent="MenuHolder"]
layout_mode = 2
focus_next = NodePath("../QuitBtn")
focus_mode = 2
theme = ExtResource("1_xos3m")
theme_override_font_sizes/font_size = 33
button_mask = 0
text = "Resume"

[node name="QuitBtn" type="MenuButton" parent="MenuHolder"]
layout_mode = 2
focus_previous = NodePath("../ResumeBtn")
focus_mode = 2
theme = ExtResource("1_xos3m")
theme_override_font_sizes/font_size = 33
text = "Quit"

[connection signal="pressed" from="MenuHolder/ResumeBtn" to="." method="_on_resume_btn_pressed"]
[connection signal="pressed" from="MenuHolder/QuitBtn" to="." method="_on_quit_btn_pressed"]
